--- a/app/src/main/res/layout/send_message_bar.xml
+++ b/app/src/main/res/layout/send_message_bar.xml
@@ -7,12 +7,12 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorAccent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true">
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/edit_text_send_msg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -21,13 +21,12 @@
             android:textColorHighlight="@color/colorAccent"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
-            android:layout_toStartOf="@+id/button" />
+            android:layout_toStartOf="@+id/button_send_msg" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/button_send_msg"
             android:layout_width="54dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/ic_send_msg"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true" />
     </RelativeLayout>
