Tomek poprawił rejestrację

--- a/app/src/main/res/layout/list_item_chat_message.xml
+++ b/app/src/main/res/layout/list_item_chat_message.xml
@@ -7,12 +7,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginBottom="@dimen/margin_standard">
 
         <TextView
             android:id="@+id/txtInfo"
             android:layout_width="wrap_content"
-            android:layout_height="30sp"
+            android:layout_height="15sp"
             android:layout_gravity="right"
             android:textSize="12sp"
             android:textColor="@android:color/darker_gray" />
