--- a/app/src/main/res/layout/nav_header_menu.xml
+++ b/app/src/main/res/layout/nav_header_menu.xml
@@ -19,17 +19,17 @@
         android:layout_alignParentStart="true"/>
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textView_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/username_placeholder"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:layout_above="@+id/textView"
+        android:layout_above="@+id/textView_email"
         android:layout_toEndOf="@+id/imageView3"
         android:layout_marginStart="11dp"/>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/email_placeholder"
