--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="margin_standard">15dp</dimen>
+    <dimen name="margin_5">5dp</dimen>
+    <dimen name="padding_5">5dp</dimen>
     <dimen name="margin_logo">50dp</dimen>
     <dimen name="padding_standard">10dp</dimen>
     <dimen name="avatar_size">70dp</dimen>
