--- a/app/src/main/res/layout/list_item_registered_user.xml
+++ b/app/src/main/res/layout/list_item_registered_user.xml
@@ -44,7 +44,7 @@
                 android:id="@+id/button_add_user"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="@string/add_user"
+                android:text="@string/invite_user"
                 android:layout_gravity="end"
                 android:background="@color/colorAccent"/>
         </LinearLayout>
