--- a/app/src/main/res/layout/my_profile_view.xml
+++ b/app/src/main/res/layout/my_profile_view.xml
@@ -30,7 +30,7 @@
                 android:src="@mipmap/ic_person"/>
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/my_profile_username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
