--- a/app/src/main/res/layout/list_item_friend.xml
+++ b/app/src/main/res/layout/list_item_friend.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <TextView
-                android:id="@+id/txtInfo"
+                android:id="@+id/friendsList_username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="bottom"
@@ -26,7 +26,7 @@
                 android:textColor="@color/textColorPrimary" />
 
             <TextView
-                android:id="@+id/txtMessage"
+                android:id="@+id/friendsList_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/textSizePrimary"
